Added Smaz compression algorithm